# Hanhan_Den

./: .gitignore  README.md  database.db
backend/: .env.example  add_game.py  init_admin.py  main.py  pyproject.toml
backend/core/: __init__.py  auth.py  config.py  models.py  prompts.py  story_generator.py
backend/db/: database.py
backend/models/: __init__.py  content.py  job.py  story.py  user.py
backend/routers/: __init__.py  admin.py  auth.py  job.py  story.py
backend/schemas/: __init__.py  content.py  job.py  story.py  user.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/public/games/: minesweeper.html  typing-game.html  typing.html
frontend/src/: App.css  App.jsx
frontend/src/components/: AdminArticles.css  AdminArticles.jsx  AdminCommon.css  AdminGalleries.css  AdminGalleries.jsx  AdminGames.css  AdminGames.jsx  AdminLayout.css  AdminLayout.jsx  AdminLogin.css  AdminLogin.jsx  Ai.jsx  Articles.jsx  AuthGuard.jsx  Games.jsx  SiteLayout.jsx  StoryGame.jsx  StoryGenerator.jsx  StoryLoader.jsx  ThemeInput.jsx
